--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
 node_modules
 /dist
+*/venv
+*/**/__pycache__
 
 # local env files
 .env.local
@@ -19,3 +21,6 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+
+# Token for Freelancehunt API
+Server/freelance_api/token.py
