--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vue-sidebar-menu": "^4.5.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
